# pylovo_fork

./: .env.example  .gitignore  CHANGELOG.md  README.rst  SOLUTION_SUMMARY.md  backfill_parameters.py  pyproject.toml  requirements.txt  schema_qualification_handoff.md  transformer_map_ui.py
QGIS/: pylovo_qwc.qgz  template_local_db.qgz  template_remote_db.qgz
config/: config_analysis.yaml  config_clustering.yaml  config_data.yaml  config_database.yaml  config_generation.yaml  config_grid.yaml  config_plotting.yaml  config_table_structure.py  config_version.yaml
data/municipal_register/gemeindeverzeichnis/: plz_einwohner.xlsx  zuordnung_plz_ort.xlsx
data/transformer_data/overpass_queries/: shopping_mall_query.txt  substations_query.txt
docs/source/: configuration.rst  index.rst
docs/source/grid_generation/: index.rst
docs/source/installation/: installation.rst
notebook_tutorials/classification/clustering/: 1_0_kmedoids_representative_grids.ipynb  1_1_kmedoids_clusters.ipynb  2_0_kmeans_representative_grids.ipynb  2_1_kmeans_clusters.ipynb  3_0_gmm_representative_grids.ipynb  3_1_gmm_clusters.ipynb
notebook_tutorials/classification/correlation_and_factor_analysis/: 1_0_factor_analysis.ipynb  1_1_explained_variance_eigen_decomposition.ipynb  1_2_correlation_matrix.ipynb
notebook_tutorials/classification/indices/: 1_CH_index.ipynb  2_DB_index.ipynb
notebook_tutorials/classification/sampling/: analyse_sampling_results.ipynb
notebook_tutorials/grid_generation/: 1_map_visualization_examples.ipynb  2_0_LV_pandapower_network.ipynb  4_basic_plotting.ipynb  debug_nodetonode.ipynb
plotting/: __init__.py  export_net.py  plot_networks.py  utils.py
plotting/classification/: __init__.py  clustering.py  features.py
plotting/generation/: networks.py
plotting/gis_preparation/: io_geodata.py
plotting/validation/: powerflow.py  statistics.py
pylovo/input_queries/: buildings.sql  prepare_buildings.py
pylovo/input_queries/buildings_sql/: 02_create_buildings_table.sql  06_create_touching_buildings_temp_tables.sql  08_fill_occupants.sql  09_fill_households.sql  10_fill_construction_year.sql  11_fill_building_type.sql  13_add_constraints.sql
raw_data/: add_postcode_entry.sql  add_testing_postcodes.sql
raw_data/municipal_register/: join_regiostar_gemeindeverz.py
runme/: main_constructor.py  main_generation.py  run_validation.py
runme/analyze/: __init__.py  get_parameters_per_grid.py  get_parameters_per_plz.py
runme/create/: README.md  create_grid_ags.py  create_grid_multi_plz.py  create_grid_single_plz.py  create_grids.py
runme/delete/: delete_networks.py  delete_version.py
runme/export/: export_grid_gis_data_as_csv_for_grid.py  export_grid_gis_data_as_csv_for_plz.py
runme/import/: import_testing_postcode_geom.py  import_transformers_via_ui.py  load_test_postcodes.py
runme/test/: add_testing_postcode.py
runme/validation/: __init__.py  convert_json_to_excel.py  export_geodata_to_csv.py  run_metrics.py
src/: cable_installer.py  config_loader.py  grid_generator.py  utils.py
src/analysis/: COMPLETION_SUMMARY.md  GRID_SPLITTING_SOLUTION_REPORT.md  README.md  README_DSO_ANALYSIS.md  benchmark_analysis.py  config_validation.yaml.template  data_adapter.py  export_geodata_as_csv.py  grid_validation.py  multi_grid_splitter.py  parameter_calculation.py  path_loader.py  powerflow_analysis.py  pp_json_to_excel.py  run_validation_analysis.py  standalone_calculator.py  swd_naming_parser.py  topology_analysis.py  topology_analysis_forchheim.py  utils.py  validation_plots.ipynb
src/analysis/core/: __init__.py  topology_analysis.py
src/analysis/tools/: __init__.py  convert_json_to_excel.py  export_geodata_to_csv.py  grid_splitter.py  lv_subgrid_splitter.py
src/analysis/validation/: COMPLETE_SOLUTION_SUMMARY.md  __init__.py  batch_metrics_export.py  forchheim_naming_convention.md  grid_splitter.py  lv_subgrid_splitter.py  metrics_calculator.py  naming_conventions.py  network_adapter.py  network_adapter_swf.py  parameter_calculation.py  parameter_calculation_swf.py  plot_all_on_map.py  plot_all_subgrids.py  plot_subgrids_interactive.py  plot_validation.py  powerflow_analysis.py  simultaneous_load_calculator.py  subgrid_splitter_swf.py  swd_naming_convention.md  utils.py  validation_plots.ipynb
src/analysis/validation_swf/: __init__.py  network_adapter_swf.py  parameter_calculation_swf.py  subgrid_splitter_swf.py  utils_swf.py
src/classification/clustering/: cluster_settings.py  prepare_data_for_clustering.py
src/classification/database_communication/: database_communication.py
src/classification/sampling/: sample.py
src/data_import/: import_buildings.py  import_transformers.py  transformer_capacity_utils.py  transformers_ui.py
src/data_import/infdb_preparations/: prepare_buildings.py  (+2 more)
src/database/: analysis_mixin.py  clustering_mixin.py  database_client.py  database_constructor.py  grid_mixin.py  preprocessing_mixin.py  utils_mixin.py
src/electrical_backend/: __init__.py  backend_interface.py  component_specs.py  equipment_adapters.py  factory.py  opendss_backend.py  opendss_component_factory.py  pandapower_backend.py  registry.py  template_backend.py
src/infdb/: infdb_client.py
src/pylovo/: __init__.py  cable_installer.py  config_loader.py  grid_generator.py  utils.py
validation/: convert_subnet_geos.py  grid_comparison_notebook.ipynb  grid_comparison_notebook_v2.ipynb  grid_model_description.md  grid_preparation_notebook.ipynb  inspect_grid.py
validation/grid_comparison/: README.md  analyze_details.py  calibration_insights.md  check_crs.py  compare_grids.py  compare_grids_v1.py  compare_grids_v2.py  comparison_notebook.py  debug_grids.py  feeder_calculation_adjustments.md  generate_notebook.py  grid_comparison_notebook.ipynb  grid_comparison_notebook_old.ipynb  inspect_master.py  interactive_analysis.ipynb  kvs_cable_installation_brief.md  update_notebook_v2.py
validation/grid_preparation/: convert_subnet_geos.py  grid_preparation_notebook.ipynb  split_to_subgrids.py
validation/metrics/: real_grid_metrics.csv  synthetic_grid_metrics.csv
(+109 files in other folders)
